9/UI/Panel/ViewControls z-index fix for container query 26634

--- a/templates/default/070-components/UI-framework/Layout/_ui-component_standardpage.scss
+++ b/templates/default/070-components/UI-framework/Layout/_ui-component_standardpage.scss
@@ -6,15 +6,6 @@
 //== Standard Page
 $il-standard-page-small-mainbar-height-w-bottom-safe-area: calc($il-standard-page-small-mainbar-height + 1.2 * env(safe-area-inset-bottom));
 
-//** z-index
-$il-standard-page-zindex-base: 1000;
-$il-standard-page-zindex-header: $il-standard-page-zindex-base - 1;
-$il-standard-page-zindex-maincontrols: $il-standard-page-zindex-header - 1;
-$il-standard-page-zindex-mainbar: $il-standard-page-zindex-maincontrols - 1;
-$il-standard-page-zindex-mainbar-slates: $il-standard-page-zindex-mainbar - 1;
-$il-standard-page-zindex-breadcrumbs: $il-standard-page-zindex-mainbar-slates - 1;
-$il-standard-page-zindex-systeminfo: $il-standard-page-zindex-header - 1;
-
 /*
 *********************
 grid-based layout
