--- a/templates/default/070-components/UI-framework/ViewControl/_ui-component_viewcontrol.scss
+++ b/templates/default/070-components/UI-framework/ViewControl/_ui-component_viewcontrol.scss
@@ -149,6 +149,7 @@ $il-vc-pagination-btn-active-bg: $il-main-bg;
 
 // container queries - change design when viewcontrol is in a narrow toolbar
 .panel-viewcontrols {
+	z-index: $il-z-index-content;
 	@include container-query.set-container-context(toolbar);
 	@include container-query.style-in-context(toolbar) {
 		.il-viewcontrol-sortation .label {
